# simulation-ui/IEC-104-UI/projects/iec60870-104-simulator/src/lib/api/v1/api/api.ts
@@ -1,9 +1,7 @@
 export * from './dataPointConfigs.service';
 import { DataPointConfigsService } from './dataPointConfigs.service';
-export * from './dataPointValue.service';
-import { DataPointValueService } from './dataPointValue.service';
+export * from './dataPointValues.service';
+import { DataPointValuesService } from './dataPointValues.service';
 export * from './simulationEngineState.service';
 import { SimulationEngineStateService } from './simulationEngineState.service';
-export * from './valueConfig.service';
-import { ValueConfigService } from './valueConfig.service';
-export const APIS = [DataPointConfigsService, DataPointValueService, SimulationEngineStateService, ValueConfigService];
+export const APIS = [DataPointConfigsService, DataPointValuesService, SimulationEngineStateService];
