# simulation-ui/IEC-104-UI/projects/iec60870-104-simulator/src/lib/api/v1/model/models.ts
@@ -1,7 +1,15 @@
+export * from './doublePointValueDto';
 export * from './eNGINECOMMAND';
+export * from './floatValueDto';
 export * from './iec104DataPoint';
 export * from './iec104DataPointDto';
 export * from './iec104DataTypes';
 export * from './iecAddress';
+export * from './iecDoublePointValueEnumDto';
+export * from './iecValueDto';
+export * from './intValueDto';
+export * from './scaledValueDto';
 export * from './simulationMode';
+export * from './simulationModeDto';
 export * from './simulationState';
+export * from './singlePointValueDto';
