# simulation-ui/IEC-104-UI/projects/iec60870-104-simulator/src/lib/api/v1/model/simulationModeDto.ts
@@ -1,0 +1,24 @@
+/**
+ * IEC60870-5-104-simulator.API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export type SimulationModeDto = 'None' | 'Cyclic' | 'CyclicStatic' | 'Response';
+
+export const SimulationModeDto = {
+
+    None: 'None' as SimulationModeDto,
+
+    Cyclic: 'Cyclic' as SimulationModeDto,
+
+    CyclicStatic: 'CyclicStatic' as SimulationModeDto,
+
+    Response: 'Response' as SimulationModeDto
+};
+
